--- a/Software/KeyboardFactory/CMakeLists.txt
+++ b/Software/KeyboardFactory/CMakeLists.txt
@@ -14,22 +14,27 @@ find_package(Qt6 COMPONENTS
         Widgets
         REQUIRED)
 
+link_directories(lib/hidapi/x64)
 include_directories(
         components/inc
         service/inc
-        lib/hidapi
+        lib/hidapi/inc
 )
 
 file(GLOB MAIN_INC components/inc/*.h service/inc/*.h)
 file(GLOB MAIN_SRC components/src/*.cpp service/src/*.cpp)
-file(GLOB LIB_INC lib/hidapi/*.h)
-file(GLOB LIB_SRC lib/hidapi/*.c)
+file(GLOB HID_LIB lib/hidapi/inc/*.h lib/hidapi/src/*.cpp)
 
-add_executable(KeyboardFactory main.cpp ${MAIN_INC} ${MAIN_SRC} ${LIB_INC} ${LIB_SRC})
+link_libraries(hid SetupAPI)
+
+add_executable(KeyboardFactory main.cpp ${MAIN_INC} ${MAIN_SRC} ${HID_LIB})
+
 target_link_libraries(KeyboardFactory
         Qt::Core
         Qt::Gui
         Qt::Widgets
+        hid
+        setupapi
         )
 
 if (WIN32)
